# must-finance

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  next.config.js  package.json
admin-portal/: .env.example  README.md  package.json
admin-portal/src-tauri/: Cargo.toml  tauri.conf.json
frontend/app/src/: form-utils.ts
frontend/app/src/comps/Positions/: PositionCard.tsx
frontend/app/src/tx-flows/: openBorrowPosition.tsx
messages/: ar.json  en.json  hi.json  pl.json  ru.json  uk.json  zh.json
prisma/: schema.prisma
public/: manifest.json
src/: i18n.ts  middleware.ts
src/app/: globals.css
src/app/[locale]/: layout.tsx  page.tsx
src/app/[locale]/account/: page.tsx
src/app/[locale]/admin/: page.tsx
src/app/[locale]/cart/: page.tsx
src/app/[locale]/checkout/: page.tsx
src/app/[locale]/products/: page.tsx
src/app/[locale]/support/: page.tsx
src/app/api/cart/: route.ts
src/app/api/inventory/: route.ts
src/app/api/orders/: route.ts
src/app/api/products/: route.ts
src/app/api/refunds/: route.ts
src/app/api/search/: route.ts
src/app/api/upload/: route.ts
src/components/admin/: image-upload.tsx
src/components/checkout/: blik-payment.tsx
src/components/layout/: footer.tsx  header.tsx  language-switcher.tsx
src/components/products/: product-card.tsx  product-details.tsx  product-filters.tsx  product-grid.tsx
src/components/search/: search-bar.tsx
src/components/ui/: toast.tsx
src/lib/: auth.ts  blik.ts  utils.ts
src/lib/marketplace/: aliexpress.ts  allegro.ts  amazon.ts
src/store/: cart-store.ts
(+41 files in other folders)
